@startuml ockam
scale 2.0

class ProfileState {
    vault: Vault
    key: KeyAttributes
    contacts: Contacts
}

class User
class Profile
class Entity
class EntityWorker
interface Identity

EntityWorker --> ProfileState : delegates
Entity --> EntityWorker : delegates
Profile --> Entity : delegates

Entity --> Profile : creates
EntityWorker --> ProfileState : creates

Identity --> Entity : implemented_by
Identity --> Profile : implemented_by
Identity --> ProfileState : implemented_by
User --> Identity : uses
User --> Entity : creates
@enduml
